deploy/kubernetes/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "qrgenerator"
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrgenerator-front
  namespace: "qrgenerator"
  labels:
    app.kubernetes.io/name: qrgenerator-front
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qrgenerator-front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qrgenerator-front
    spec:
      containers:
        - name: front-nginx
          imagePullPolicy: Always
          image: "registry.againddm.keenetic.pro/homelab/qr-front:latest"
          resources:
            limits:
              cpu: "100m"
              memory: "64Mi"
            requests:
              cpu: "1m"
              memory: "8Mi"
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          ports:
            - name: frontend-port
              containerPort: 8080
            - name: service-port
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /ping
              port: service-port
            failureThreshold: 30
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /ping
              port: service-port
            initialDelaySeconds: 5
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: frontend-port
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 2
          volumeMounts:
            - mountPath: /tmp
              name: nginx-tmp
        - name: telegraf-sidecar
          imagePullPolicy: Always
          image: "telegraf:1.22"
          command:
            - "telegraf"
          args:
            - "--config"
            - "/etc/telegraf.conf"
          resources:
            limits:
              cpu: "100m"
              memory: "64Mi"
            requests:
              cpu: "1m"
              memory: "8Mi"
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 999
            runAsGroup: 999
          ports:
            - name: metrics-port
              containerPort: 9273
          startupProbe:
            httpGet:
              path: /metrics
              port: metrics-port
            failureThreshold: 30
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics-port
            initialDelaySeconds: 5
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics-port
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 2
          volumeMounts:
            - mountPath: /etc/telegraf.conf
              name: telegraf-conf
      volumes:
        - name: nginx-tmp
          emptyDir:
            sizeLimit: 64Mi
        - name: telegraf-conf
          configMap:
            name: telegraf-conf
...
---
kind: Service
apiVersion: v1
metadata:
  name: qrgenerator-front
  namespace: "qrgenerator"
  labels:
    app.kubernetes.io/name: qrgenerator-service-front
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  ports:
    - name: frontend-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: qrgenerator-front
...
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: qrgenerator
  namespace: "qrgenerator"
  labels:
    app.kubernetes.io/name: qrgenerator-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: qr.againddm.keenetic.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qrgenerator-front
                port:
                  number: 8080
  defaultBackend:
    service:
      name: qrgenerator-front
      port:
        number: 8080
...
